# switch-audio.app

./: README.md  package.json
src/: App.tsx  audio-helper.ts  tray.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_helper.rs  lib.rs  main.rs
